# automated-jobs-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: app.py  database.py  ingestor.py  main.py  watcher.py
templates/: analytics.html  base.html  index.html
templates/partials/: add_job_form.html  detail.html  job_card.html  job_list.html  stats.html
