[project]
name = "automated-jobs-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
    "pandas>=2.0",
    "watchdog>=4.0",
    "streamlit>=1.35",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "scikit-learn>=1.3",
    "altair>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
