[project]
name = "automated-jobs-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
    "pandas>=2.0",
    "watchdog>=4.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
